Fixed layout bug #274 & code clean up

--- a/source/core/resources/style_gca.css
+++ b/source/core/resources/style_gca.css
@@ -955,6 +955,11 @@
 		.gca_packages_compact_items_layout #packages_wrapper .packageItem > div:nth-child(5) span{font-size: 12px;font-style: italic;}
 		.gca_packages_compact_items_layout .pagination > .section-header{margin-top: 0px!important;}
 
+		/* Show item's price */
+		#packages .packageItem .gca_item_price_info {position: absolute;color: white;text-align: right;font-size: 10px;overflow: hidden;margin-top: -52px;width: 63px;text-shadow: rgb(0, 0, 0) 0px 0px 2px;}
+		.gca_packages_compact_items_layout #packages .packageItem .gca_item_price_info {margin-top: -44px;width: 70px;}
+		#packages .packageItem .gca_item_price_info .icon_gold {transform: scale(0.8);}
+
 		/* Small Size Packets */
 		.gca_packages_small_items_layout .packageItem > div:nth-of-type(2){transform: scale(0.5);margin: -25px auto!important;}
 		.gca_packages_small_items_layout .packageItem {height: 94px;}
